--- a/pag-html.html
+++ b/pag-html.html
@@ -8,7 +8,7 @@
     <title>HTML</title>
 </head>
 <body>
-    <main id="segunda">
+    <main id="container__second">
         <h1>Curso de HTML</h1>
         
         <div class="video">
@@ -19,7 +19,7 @@
             <p>Veja o curso completo</p>
         </a>
         
-        <a href="index.html"><img src="images/voltar.png" alt="Botão de voltar" class="botton"></a>
+        <a href="index.html"><img class="button" src="images/voltar.png" alt="Botão de voltar"></a>
     </main>
 </body>
 </html>
