--- a/pag-js.html
+++ b/pag-js.html
@@ -8,7 +8,7 @@
     <title>JavaScript</title>
 </head>
 <body>
-    <main id="segunda">
+    <main id="container__second">
         <h1>Curso de JavaScript</h1>
         
         <div class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/1-w1RfGIov4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
@@ -17,7 +17,7 @@
             <p>Veja o curso completo</p>
         </a>
        
-        <a href="index.html"><img src="images/voltar.png" alt="Botão de voltar" class="botton"></a>
+        <a href="index.html"><img class="button" src="images/voltar.png" alt="Botão de voltar"></a>
     </main>
 </body>
 </html>
